// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`community plan judge scenarios > scenario 0 plan matches the deterministic snapshot 1`] = `
{
  "ai_status": "not_configured",
  "community_id": "tongzilin",
  "generated_at": "2027-04-01T09:00:00+08:00",
  "generated_by": "tongzilin-rule-engine-v1",
  "generation_source": "rule_based",
  "items": [
    {
      "duration_minutes": 60,
      "item_id": "stop_place_001",
      "place": {
        "_id": "place_006",
        "category_level_1": "community",
        "cover_url": "https://images.unsplash.com/photo-1524178232363-1fb2b075b655",
        "is_recommended": true,
        "location": {
          "latitude": 30.6148,
          "longitude": 104.0622,
        },
        "name_en": "Tongzilin English Corner",
        "name_zh": "桐梓林英语角",
      },
      "ref_id": "place_006",
      "ref_type": "place",
      "start_offset_minutes": 0,
      "status": "pending",
      "summary_en": "Community public spaces are core nodes for meeting long-term residents and joining activities.",
      "summary_zh": "社区公共空间是结识长期居民和参与邻里活动的核心节点。",
      "tips_en": "Community squares and social spaces often host informal gatherings; feel free to join.",
      "tips_zh": "社区广场和小型社交空间常有自发聚会，欢迎主动加入。",
      "title_en": "Tongzilin English Corner",
      "title_zh": "桐梓林英语角",
      "type": "place_visit",
    },
    {
      "duration_minutes": 60,
      "event": {
        "_id": "event_001",
        "cover_url": "https://example.com/public/events/event_001/cover.jpg",
        "end_time": "2027-04-02T12:00:00+08:00",
        "start_time": "2027-04-02T10:00:00+08:00",
        "summary_en": "A casual meet-up for old and new Tongzilin neighbors.",
        "summary_zh": "面向桐梓林新老居民的轻社交活动。",
        "title_en": "Weekend Neighborhood Brunch",
        "title_zh": "周末国际邻里早午餐",
      },
      "item_id": "stop_event_001",
      "ref_id": "event_001",
      "ref_type": "event",
      "start_offset_minutes": 60,
      "status": "pending",
      "summary_en": "Public community events are the most efficient way to settle into Tongzilin; volunteers are on site.",
      "summary_zh": "公开社区活动是融入桐梓林最高效的方式，现场有志愿者协助。",
      "tips_en": "Arrive early to chat with volunteers; Demo Confirm creates no real booking or ticket.",
      "tips_zh": "提前到场可和志愿者交流；演示确认不创建真实报名或票券。",
      "title_en": "Weekend Neighborhood Brunch",
      "title_zh": "周末国际邻里早午餐",
      "type": "event_attend",
    },
  ],
  "plan_id": "plan_m9b55g",
  "route_kind": "place_event",
  "total_duration_minutes": 120,
}
`;

exports[`community plan judge scenarios > scenario 1 plan matches the deterministic snapshot 1`] = `
{
  "ai_status": "not_configured",
  "community_id": "tongzilin",
  "generated_at": "2027-04-01T09:00:00+08:00",
  "generated_by": "tongzilin-rule-engine-v1",
  "generation_source": "rule_based",
  "items": [
    {
      "duration_minutes": 60,
      "item_id": "stop_place_001",
      "place": {
        "_id": "place_008",
        "category_level_1": "outdoor-sports",
        "cover_url": "https://images.unsplash.com/photo-1518602164578-cd0074062767",
        "is_recommended": true,
        "location": {
          "latitude": 30.613,
          "longitude": 104.0605,
        },
        "name_en": "Tongzilin Family Park",
        "name_zh": "桐梓林亲子公园",
      },
      "ref_id": "place_008",
      "ref_type": "place",
      "start_offset_minutes": 0,
      "status": "pending",
      "summary_en": "Outdoor sports spaces are perfect for morning exercise, walks, and family activities.",
      "summary_zh": "户外运动空间适合晨练、遛弯和亲子活动，是桐梓林的天然社交场。",
      "tips_en": "Mornings and evenings are busiest and best for meeting neighbors; bring water and sun protection.",
      "tips_zh": "早晨和傍晚人最多，是认识邻居的自然时机；注意防晒和补水。",
      "title_en": "Tongzilin Family Park",
      "title_zh": "桐梓林亲子公园",
      "type": "place_visit",
    },
    {
      "duration_minutes": 60,
      "event": {
        "_id": "event_001",
        "cover_url": "https://example.com/public/events/event_001/cover.jpg",
        "end_time": "2027-04-02T12:00:00+08:00",
        "start_time": "2027-04-02T10:00:00+08:00",
        "summary_en": "A casual meet-up for old and new Tongzilin neighbors.",
        "summary_zh": "面向桐梓林新老居民的轻社交活动。",
        "title_en": "Weekend Neighborhood Brunch",
        "title_zh": "周末国际邻里早午餐",
      },
      "item_id": "stop_event_001",
      "ref_id": "event_001",
      "ref_type": "event",
      "start_offset_minutes": 60,
      "status": "pending",
      "summary_en": "Public community events are the most efficient way to settle into Tongzilin; volunteers are on site.",
      "summary_zh": "公开社区活动是融入桐梓林最高效的方式，现场有志愿者协助。",
      "tips_en": "Arrive early to chat with volunteers; Demo Confirm creates no real booking or ticket.",
      "tips_zh": "提前到场可和志愿者交流；演示确认不创建真实报名或票券。",
      "title_en": "Weekend Neighborhood Brunch",
      "title_zh": "周末国际邻里早午餐",
      "type": "event_attend",
    },
  ],
  "plan_id": "plan_1j9finr",
  "route_kind": "place_event",
  "total_duration_minutes": 120,
}
`;

exports[`community plan judge scenarios > scenario 2 plan matches the deterministic snapshot 1`] = `
{
  "ai_status": "not_configured",
  "community_id": "tongzilin",
  "generated_at": "2027-04-01T09:00:00+08:00",
  "generated_by": "tongzilin-rule-engine-v1",
  "generation_source": "rule_based",
  "items": [
    {
      "duration_minutes": 60,
      "item_id": "stop_place_001",
      "place": {
        "_id": "place_002",
        "category_level_1": "food-drink",
        "cover_url": "https://images.unsplash.com/photo-1501339847302-ac426a4a7cbb",
        "is_recommended": true,
        "location": {
          "latitude": 30.6137,
          "longitude": 104.0609,
        },
        "name_en": "Global Corner Cafe",
        "name_zh": "国际友好咖啡馆",
      },
      "ref_id": "place_002",
      "ref_type": "place",
      "start_offset_minutes": 0,
      "status": "pending",
      "summary_en": "Food and drink spots are the easiest places in Tongzilin to start casual socializing.",
      "summary_zh": "餐饮空间是桐梓林最容易开始轻社交的场所，环境对外籍居民友好。",
      "tips_en": "Peak hours may require waiting; some menus include English labels.",
      "tips_zh": "高峰时段可能需要等位，建议错峰前往；部分门店菜单有英文标注。",
      "title_en": "Global Corner Cafe",
      "title_zh": "国际友好咖啡馆",
      "type": "place_visit",
    },
    {
      "duration_minutes": 60,
      "event": {
        "_id": "event_001",
        "cover_url": "https://example.com/public/events/event_001/cover.jpg",
        "end_time": "2027-04-02T12:00:00+08:00",
        "start_time": "2027-04-02T10:00:00+08:00",
        "summary_en": "A casual meet-up for old and new Tongzilin neighbors.",
        "summary_zh": "面向桐梓林新老居民的轻社交活动。",
        "title_en": "Weekend Neighborhood Brunch",
        "title_zh": "周末国际邻里早午餐",
      },
      "item_id": "stop_event_001",
      "ref_id": "event_001",
      "ref_type": "event",
      "start_offset_minutes": 60,
      "status": "pending",
      "summary_en": "Public community events are the most efficient way to settle into Tongzilin; volunteers are on site.",
      "summary_zh": "公开社区活动是融入桐梓林最高效的方式，现场有志愿者协助。",
      "tips_en": "Arrive early to chat with volunteers; Demo Confirm creates no real booking or ticket.",
      "tips_zh": "提前到场可和志愿者交流；演示确认不创建真实报名或票券。",
      "title_en": "Weekend Neighborhood Brunch",
      "title_zh": "周末国际邻里早午餐",
      "type": "event_attend",
    },
  ],
  "plan_id": "plan_3psir1",
  "route_kind": "place_event",
  "total_duration_minutes": 120,
}
`;
